Site: Update footer.htm and README.md

--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -63,7 +63,7 @@
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
             <div class="md-footer-info">
-                PhotoPrism® ist eine eingetragene Marke von Michael Mayer. Diese Dokumentation ist unter der
+                PhotoPrism® ist eine eingetragene Marke. Diese Dokumentation ist unter der
                 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0-Lizenz</a>
                 verfügbar. Möglicherweise unterliegen einzelne Inhalte jeweils anderen Lizenzen.
                 Durch die Nutzung erklären Sie sich mit unseren <a href="https://photoprism.app/terms" target="_blank">Allgemeinen Geschäftsbedingungen</a> einverstanden.
