--- a/overrides/partials/copyright.html
+++ b/overrides/partials/copyright.html
@@ -1,12 +1,16 @@
 <div class="footer-info">
-    PhotoPrism® ist eine eingetragene Marke. Diese Dokumentation ist unter der
+    PhotoPrism® ist eine <a href="https://photoprism.app/trademark" target="_blank">eingetragene Marke</a>.
+    Diese Dokumentation ist unter der
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0-Lizenz</a>
     verfügbar. Möglicherweise unterliegen einzelne Inhalte jeweils anderen Lizenzen.
-    Durch die Nutzung erklären Sie sich mit unseren <a href="https://photoprism.app/terms" target="_blank">Allgemeinen Geschäftsbedingungen</a> einverstanden.
+    Durch die Nutzung unserer Software und Services erklären Sie sich mit unseren
+    <a href="https://photoprism.app/terms" target="_blank">Allgemeinen Geschäftsbedingungen</a>,
+    unserer <a href="https://photoprism.app/privacy" target="_blank">Privacy Policy</a>,
+    und unserem <a href="https://photoprism.app/code-of-conduct" target="_blank">Code of Conduct</a> einverstanden.
 </div>
 
 <div class="md-copyright">
-    <div class="md-copyright__highlight">
-        Made with ❤ in Berlin
+    <div class="md-copyright__highlight" title="Made with ❤ in Berlin">
+        <a href="https://photoprism.app/contact">© 2018-{{ build_date_utc.year }} PhotoPrism UG</a>
     </div>
 </div>
