Links: Change https://photoprism.app/ to https://www.photoprism.app/

--- a/overrides/partials/copyright.html
+++ b/overrides/partials/copyright.html
@@ -1,9 +1,9 @@
 <div class="footer-info">
-    PhotoPrism® ist eine <a href="https://photoprism.app/trademark" target="_blank">eingetragene Marke</a>.
+    PhotoPrism® ist eine <a href="https://www.photoprism.app/trademark" target="_blank">eingetragene Marke</a>.
     Durch die Nutzung unserer Software und Services erklären Sie sich mit unseren
-    <a href="https://photoprism.app/terms" target="_blank">Allgemeinen Geschäftsbedingungen</a>,
-    unserer <a href="https://photoprism.app/privacy" target="_blank">Privacy Policy</a>,
-    und unserem <a href="https://photoprism.app/code-of-conduct" target="_blank">Code of Conduct</a> einverstanden.
+    <a href="https://www.photoprism.app/terms" target="_blank">Allgemeinen Geschäftsbedingungen</a>,
+    unserer <a href="https://www.photoprism.app/privacy" target="_blank">Privacy Policy</a>,
+    und unserem <a href="https://www.photoprism.app/code-of-conduct" target="_blank">Code of Conduct</a> einverstanden.
     Diese Dokumentation ist unter der
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0-Lizenz</a>
     verfügbar. Möglicherweise unterliegen einzelne Inhalte jeweils anderen Lizenzen.
@@ -11,6 +11,6 @@
 
 <div class="md-copyright">
     <div class="md-copyright__highlight" title="Made with ❤ in Berlin">
-        <a href="https://photoprism.app/contact">© 2018-{{ build_date_utc.year }} PhotoPrism UG</a>
+        <a href="https://www.photoprism.app/contact">© 2018-{{ build_date_utc.year }} PhotoPrism UG</a>
     </div>
 </div>
