--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -179,14 +179,14 @@ div.action-buttons {
 }
 
 .action-button {
-    background-color: #4c0c85;
+    background-color: #4d5965;
     color: #ffffff;
     font-size: 12px;
     font-weight: 500;
     line-height: 18px;
     margin: 2px 0;
     padding: 8px 26px;
-    border-radius: 5px;
+    border-radius: 6px;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
@@ -219,7 +219,7 @@ p.center-align.action-buttons {
 p.action-buttons .action-button,
 .md-content article .action-button,
 .center-align.action-buttons .action-button {
-    background-color: #4c0c85;
+    background-color: #4d5965;
     margin-left: 2px;
     margin-right: 2px;
 }
